test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/sizeof_incomplete.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  struct
  identifier(s)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  struct
  identifier(s)
  )
  ;
  }
